--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,21 +1,21 @@
-<header>
+<header class=' '>
   <div class='jumbotron'>
     <div class='container'>
-      <div class='pull-left align-bottom'>
-        <h1>TinyApp <small><small>Create short URLs</small></small></h1>
-      </div>
-      <div class='pull-right align-bottom'>
-        <% if(user) { %>
-          <form class='form-inline' action='/logout?_method=PUT' method='POST'>
-            <a><%=user.email%></a>
-            <div class='form-group'>
-              <input class='btn btn-default' type='submit' value='Logout'>
-            </div>
-          </form>
-        <% } else { %>
-          <a href='/login' class='btn btn-default' role='button'>Login</a>
-          <a href='/register' class='btn btn-default' role='button'>Register</a>
-        <% } %> </a>
+      <div class='pull-left'>
+          <h1>TinyApp <small><small>Create short URLs</small></small></h1>
+        </div>
+        <div class='pull-right pull-bottom'>
+          <% if(user) { %>
+            <form class='form-inline' action='/logout?_method=PUT' method='POST'>
+              <a><%=user.email%></a>
+              <div class='form-group'>
+                <input class='btn btn-default' type='submit' value='Logout'>
+              </div>
+            </form>
+          <% } else { %>
+            <a href='/login' class='btn btn-default' role='button' style='width: 80px'>Login</a>
+            <a href='/register' class='btn btn-default' role='button' style='width: 80px'>Register</a>
+          <% } %> </a>
       </div>
     </div>
   </div>
