--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <head>
   <% include ./partials/_head %>
@@ -8,26 +8,32 @@
 <body>
   <% include ./partials/_header %>
 
-  <div class='container text-center'>
+  <div class='container'>
     <% if(!user) { %>
-      <h2>Login</h2>
-      <form class='form-inline' action='/login?_method=PUT' method='POST'>
+      <div class='text-center' style='padding: 10px'>
+        <h2>Login</h2>
+      </div>
+      <form class='form-horizontal' action='/login?_method=PUT' method='POST'>
         <div class='form-group'>
-          <label class='control-label' for='email'>Email:</label>
-          <input class='form-control' id='email' type="email" name="email" placeholder="Enter email">
+          <label class='control-label col-sm-4' for='email'>Email:</label>
+          <div class='col-sm-4'>
+            <input class='form-control' id='email' type='email' name='email' placeholder='Enter email'>
+          </div>
         </div>
-        <div class='form-group' style='padding-left: 20px'>
-          <label class='control-label' for='pwd'>Password:</label>
-          <input class='form-control' id='pwd' type="password" name="password" placeholder="password">
+        <div class='form-group'>
+          <label class='control-label col-sm-4' for='pwd'>Password:</label>
+          <div class='col-sm-4'>
+            <input class='form-control' id='pwd' type='password' name='password' placeholder='password'>
+          </div>
         </div>
-        <div class='form-group' style='padding-left: 20px'>
-          <input class='btn btn-primary' type='submit' value='Login' >
+        <div class='form-group text-center'>
+          <input class='btn btn-primary' type='submit' value='Login' style='width: 80px'>
         </div>
       </form>
       <% if(failed) { %>
         <div class='container text-center' style='padding-top: 20px'>
           <div class='alert alert-danger'>
-            <h5> Wrong Username or Password, Please Try Again.</h5>
+            <h5> Incorrect username or password, please try again.</h5>
           </div>
         </div>
       <% } %>
@@ -39,6 +45,7 @@
         </div>
       </form>
     <% } %>
+  </div>
 
   <% include ./partials/_footer %>
 </body>
