--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -9,7 +9,9 @@
   <% include partials/_header %>
 
   <div class='container text-center'>
-    <h2>Create a URL</h2>
+    <div style='padding: 10px'>
+      <h2>Create a URL</h2>
+    </div>
     <form class='form-inline' action='/urls' method='POST'>
       <div class='form-group'>
         <label class='control-label' for='longUrl'>Enter a URL:</label>
@@ -22,7 +24,7 @@
       </div>
     </form>
   </div>
-  <div class='container text-center'>
+  <div class='container text-center' style='padding: 20px'>
     <h4><a href='/urls'>Go Back to URLs</a></h4>
   </div>
 
