--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <head>
   <% include ./partials/_head %>
 </head>
 
 <body>
-  <% include partials/_header %>
+  <% include ./partials/_header %>
 
-  <div class='container text-center'>
-    <h2>Register</h2>
-    <form class='form-inline' action='/register' method='POST'>
+  <div class='container'>
+    <div class='text-center' style='padding: 10px'>
+        <h2>Register</h2>
+    </div>
+    <form class='form-horizontal' action='/register' method='POST'>
       <div class='form-group'>
-        <label class='control-label' for='email'>Email:</label>
-        <input class='form-control' id='email' type="email" name="email" placeholder="Enter email">
+        <label class='control-label col-sm-4' for='email'>Email:</label>
+        <div class='col-sm-4'>
+          <input class='form-control' id='email' type='email' name='email' placeholder='Enter email'>
+        </div>
       </div>
-      <div class='form-group' style='padding-left: 20px'>
-        <label class='control-label' for='pwd'>Password:</label>
-        <input class='form-control' id='pwd' type="password" name="password" placeholder="password">
+      <div class='form-group'>
+        <label class='control-label col-sm-4' for='pwd'>Password:</label>
+        <div class='col-sm-4'>
+          <input class='form-control' id='pwd' type='password' name='password' placeholder='password'>
+        </div>
       </div>
-      <div class='form-group' style='padding-left: 20px'>
-        <input class='btn btn-primary' type="submit" value="Register">
+      <div class='form-group text-center'>
+        <input class='btn btn-primary' type='submit' value='Register' style='width: 80px'>
       </div>
     </form>
     <% if(failed) { %>
       <div class='container text-center' style='padding-top: 20px'>
         <div class='text-center alert alert-danger'>
-          <h5> Username Taken or There Was an Empty Field.</h5>
+          <h5>There was either an empty field or that username is taken, please try again.</h5>
         </div>
       </div>
     <% } %>
