--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,83 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <head>
   <% include ./partials/_head %>
+  <style type='text/css'>
+    th {
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
   <% include ./partials/_header %>
 
   <div class='container text-center'>
-    <h2>Shortened URL</h2>
+    <div class='text-center' style='padding: 10px'>
+      <h2>Shortened URL</h2>
+    </div>
     <% if(url) { %>
-    <div class='list-group'>
-      <div class='list-group-item'>
+      <div class='text-center' style='padding: 10px'>
         <h4><a href='/u/<%= shortUrl %>'><%= shortUrl %></a> &rarr; <%= url.longUrl %></h4>
       </div>
-    </div>
     <% } %>
+
     <% if(user && url && url.userId === user.id) { %>
-    <div class="panel-group">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4 class="panel-title">
-            <a data-toggle="collapse" href="#collapse1">URL Analytics</a>
-          </h4>
-        </div>
-        <div id="collapse1" class="panel-collapse collapse">
-          <ul class="list-group">
-            <li class="list-group-item">
-              <div class='row'>
-                <div class='col-sm-6'>
-                  <p><strong>Total Visits:</strong></p>
-                  <p><%= url.visits %></p>
-                </div>
-                <div class='col-sm-6'>
-                   <p><strong>Unique Visits:</strong></p>
-                   <p><%= url.visitors.length %></p>
-                </div>
-              </div>
-            </li>
-            <li class="list-group-item">
-              <div class='row'>
-                <div class='col-sm-12'>
-                  <p>Visit History:</p>
-                  <% url.history.forEach( function(visit) { %>
-                  <p><strong>Visitor Id: </strong><%= visit[1] %> &rarr; <strong>Date: </strong><%= visit[0] %></p>
-                  <% }); %>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-      <form class='form-inline' action='/urls/<%= shortUrl %>?_method=PUT' method='POST'>
+      <form class='form-horizontal' action='/urls/<%= shortUrl %>?_method=PUT' method='POST'>
         <div class='form-group'>
-          <label class='control-label' for='longUrl'>Enter an updated URL:</label>
+          <label class='control-label col-sm-4' for='longUrl'>Enter an updated URL:</label>
+          <div class='col-sm-4'>
+            <input class='form-control' id='longUrl' type='text' name='longUrl' value='<%= url.longUrl %>' style='width: 400px'>
+          </div>
         </div>
-        <div class='form-group'>
-          <input class='form-control' id='longUrl' type='text' name='longUrl' value='<%= url.longUrl %>' style='width: 400px'>
-        </div>
-        <div class='form-group'>
+        <div class=''>
           <input class='btn btn-primary' type='submit' value='Update'>
         </div>
       </form>
-    <% } else if (!url) { %>
-      <div class='text-center alert alert-danger'>
+    <% } else { %>
+      <div class='alert alert-danger' style='padding: 20px'>
+      <% if(!url) { %>
         <h5><strong>Error!</strong> Could Not Find the URL.</h5>
-      </div>
-    <% } else if (!user) { %>
-      <div class='text-center alert alert-danger'>
+      <% } else if (!user) { %>
         <h5><strong>Error!</strong> Please Login to Edit This URL.</h5>
-      </div>
-    <% } else if(url.userId !== user.id){ %>
-      <div class='text-center alert alert-info'>
+      <% } else if(url.userId !== user.id) { %>
         <h5><strong>Error!</strong> Insufficient Permissions to Edit This URL.</h5>
+      <% } %>
       </div>
     <% } %>
-    <h4><a href="/urls">Go Back to URLs</a></h4>
+    <div style='padding: 20px'>
+      <h4><a href='/urls'>Go Back to URLs</a></h4>
+    </div>
+
+    <% if(user && url && url.userId === user.id) { %>
+      <table class='table table-condensed'>
+        <thead>
+          <tr>
+            <th class='col-sm-3'>Visits</th>
+            <th class='col-sm-3'>Unique Visits</th>
+            <th class='col-sm-6'>Date Created</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><%= url.visits %></td>
+            <td><%= url.visitors.length %></td>
+            <td><%= url.date %></td>
+          </tr>
+        </tbody>
+      </table>
+      <table class='table table-condensed'>
+        <thead>
+          <tr>
+            <th class='col-sm-3'>Visit Number</th>
+            <th class='col-sm-3'>Visitor Id</th>
+            <th class='col-sm-6'>Visit Date</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% url.history.forEach( function(visit, i) { %>
+            <tr>
+              <td><%= i + 1 %></td>
+              <td><%= visit[1] %></td>
+              <td><%= visit[0] %></td>
+            </tr>
+          <% }); %>
+        </tbody>
+      </table>
+    <% } %>
   </div>
 
   <% include ./partials/_footer %>
