feat: Update packages and fix broken views

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -2,11 +2,11 @@
 <html lang='en'>
 
 <head>
-  <% include ./partials/_head %>
+  <%- include('partials/_head'); %>
 </head>
 
 <body>
-  <% include ./partials/_header %>
+  <%- include('partials/_header'); %>
 
   <div class='container'>
     <div class='text-center' style='padding: 10px'>
@@ -52,7 +52,7 @@
     </div>
   </body>
 
-  <% include ./partials/_footer %>
+  <%- include('partials/_footer'); %>
 </body>
 
 </html>
