--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -2,11 +2,11 @@
 <html lang='en'>
 
 <head>
-  <% include ./partials/_head %>
+  <%- include('partials/_head'); %>
 </head>
 
 <body>
-  <% include ./partials/_header %>
+  <%- include('partials/_header'); %>
 
   <div class='container'>
     <% if(!user) { %>
@@ -47,7 +47,7 @@
     <% } %>
   </div>
 
-  <% include ./partials/_footer %>
+  <%- include('partials/_footer'); %>
 </body>
 
 </html>
