--- a/views/urls_redirect.ejs
+++ b/views/urls_redirect.ejs
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <% include ./partials/_head %>
+  <%- include('partials/_head'); %>
 </head>
 
 <body>
-  <% include ./partials/_header %>
+  <%- include('partials/_header'); %>
 
   <div class='container text-center'>
     <% if(failed) { %>
@@ -23,7 +23,7 @@
     </div>
   </div>
 
-  <% include ./partials/_footer %>
+  <%- include('partials/_footer'); %>
 </body>
 
 </html>
