--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -2,11 +2,11 @@
 <html lang='en'>
 
 <head>
-  <% include ./partials/_head %>
+  <%- include('partials/_head'); %>
 </head>
 
 <body>
-  <% include ./partials/_header %>
+  <%- include('partials/_header'); %>
 
   <div class='container'>
     <div class='text-center' style='padding: 10px'>
@@ -38,7 +38,7 @@
     <% } %>
   </div>
 
-  <% include ./partials/_footer %>
+  <%- include('partials/_footer'); %>
 </body>
 
 </html>
