--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -2,7 +2,7 @@
 <html lang='en'>
 
 <head>
-  <% include ./partials/_head %>
+  <%- include('partials/_head'); %>
   <style type='text/css'>
     th {
       text-align: center;
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <% include ./partials/_header %>
+  <%- include('partials/_header'); %>
 
   <div class='container text-center'>
     <div class='text-center' style='padding: 10px'>
@@ -88,7 +88,7 @@
     <% } %>
   </div>
 
-  <% include ./partials/_footer %>
+  <%- include('partials/_footer'); %>
 </body>
 
 </html>
